--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,4 @@
 theme: jekyll-theme-tactile
 markdown: GFM
+title: Drum Solo Generator homepage
+description: Bookmark this to keep an eye on my project updates!
