--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-tactile
 markdown: GFM
 title: Drum Solo Generator homepage
-description: Bookmark this to keep an eye on my project updates!
+description: Code to write rock drum solos based on Markov processes 
